--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-azure_storage==0.37.0
+azure-storage==0.37.0
 imgaug==0.4.0
 lxml==4.8.0
 numpy==1.22.2
-opencv_python==4.5.5.62
+opencv-python==4.5.5.62
 pandas==1.4.1
 streamlit==1.5.1
